syntax = "proto3";

option go_package = "genproto/category";

package category;

service Categorys {
  rpc GetCategories (Pagination) returns (Categories);
  rpc CreateCategory (Category) returns (Id);
  rpc UpdateCategory (Category) returns (Category);
  rpc DeleteCategory (Id) returns (Void);
}
message Void {}
message Categories {
  repeated Category categories =1;
}
message Category {
  string id = 1;
  string name = 2;
  string description = 3;
}
message Id {
  string id = 1;
}
message Pagination {
  int64 limit = 1;
  int64 page = 2;
}